--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "mobx": "^6.13.7",
     "mobx-react": "^9.2.0",
     "next": "15.3.0",
